# track--n--trace

./: .gitignore  README.md  file_structure.md  skeletrace-sourcecode.tar  tatus
docs/: 4x_prompts.txt  a_foundation_plan.txt  claude-4-sources-convo.txt  claude-writes-a-paper-convo.txt  gemini_convo.txt  possible_sources.txt  prompt-to-cont.txt  skeletrace-comprehensive-analysis.tex  state-as-of-v12.txt
previous-versions/maxwells-demon-detector-rs-live/: README.md  README.og
previous-versions/maxwells-demon-detector-rs-live/maxwells-demon-detector-rs-live/: Cargo.toml  README.md
previous-versions/maxwells-demon-detector-rs-live/maxwells-demon-detector-rs-live/src/: model.rs
previous-versions/maxwells-demon-detector-rs-live/maxwells-demon-detector-rs-live/src/source/: live_pcap.rs
previous-versions/skeletrace-packet-formalization-files/: README.txt
previous-versions/skeletrace-stage4/: Cargo.toml  NOTES.md
previous-versions/skeletrace-stage5/: Cargo.toml  STAGE5_ENGINE.md
previous-versions/skeletrace-stage6/: Cargo.toml
previous-versions/skeletrace-stage7/: Cargo.toml  NOTES.md
previous-versions/skeletrace-stage7/src/: operator.rs
previous-versions/skeletrace-stage8/: NOTES.md  STAGE2_TESTING.md
previous-versions/skeletrace-stage9/: STAGE6_ENGINE.md
previous-versions/stage10/: Cargo.toml
previous-versions/stage11_build/: STAGE8_ENGINE.md
previous-versions/stage11_lookyloo/: TRANSPORT_PATCH_NOTES.md
previous-versions/stage11_transport_fixed/: STAGE4_ENGINE.md
previous-versions/stage12_lookyloo_topology/: LOOKYLOO_TOPOLOGY_COMPAT_FIX2_NOTES.md  LOOKYLOO_TOPOLOGY_COMPAT_FIX_NOTES.md  LOOKYLOO_TOPOLOGY_NOTES.md  NOTES.md  STAGE11_ENGINE.md
previous-versions/v0.1.0/: Cargo.toml
previous-versions/v0.1.0/src/: entity.rs  ingest.rs  lib.rs  snapshot.rs  types.rs  view.rs
skeletrace-polished/: NOTES.md
skeletrace-polished/src/: types.rs
skeletrace-sourcecode/st12fix/: Cargo.toml
skeletrace-stage2/: Cargo.toml
skeletrace-stage3/: Cargo.toml  NOTES.md
skeletrace-stage3/src/: engine.rs  entity.rs
skeletrace-stage4/src/: engine.rs
skeletrace-stage5/: NOTES.md
skeletrace-stage5/src/: engine.rs  lib.rs  transport.rs
skeletrace-stage6/: NOTES.md
skeletrace-stage6/src/: export.rs  store.rs
skeletrace-stage7/src/: adapter.rs  engine.rs  lib.rs
skeletrace-stage8/: Cargo.toml
skeletrace-stage9/: Cargo.toml  NOTES.md  file_structure.md
skeletrace3/: Cargo.toml
skeletrace4/: Cargo.toml
skeletrace4/examples/: network_demo.rs  privacy_demo.rs  security_demo.rs
skeletrace4/src/: cache.rs  entity.rs  graph.rs  ingest.rs  lib.rs  types.rs  view.rs
skeletrace4/src/network/: analysis.rs  detection.rs  engine.rs  mod.rs  types.rs
skeletrace4/src/privacy/: detection.rs  mod.rs
skeletrace4/src/probe/: mod.rs
skeletrace4/src/security/: engine.rs  mod.rs
st12fix/: INTEGRATION_NOTES.md  LOOKYLOO_ADAPTER_NOTES.md  LOOKYLOO_TIMESTAMP_FIX_NOTES.md  LOOKYLOO_TOPOLOGY_VIEWJOB_FIX_NOTES.md  QUERY_MATURITY_NOTES.md  README.md  STAGE7_ENGINE.md  STAGE9_ENGINE.md  skeletrace-packet-integration-fix.diff
st12fix/src/: lib.rs  (+21 more)
stage10/: NOTES.md
stage11_build/: Cargo.toml  STAGE10_ENGINE.md
stage11_lookyloo_timestampfix/: STAGE3_ENGINE.md
stage12_lookyloo_topology/: LOOKYLOO_CUMULATIVE_FIX_NOTES.md
(+156 files in other folders)
