[package]
name = "skeletrace"
version = "0.3.0"
edition = "2021"
description = "Sparse spatiotemporal flow-graph engine for OSINT telemetry"
authors = ["wofl"]
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
