[package]
name = "maxwells-demon-detector"
version = "0.2.0"
edition = "2021"
description = "Realtime ASCII network-stream mapper and anomaly landscape renderer with live libpcap/Npcap capture"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
csv = "1.3"
pcap = "2.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
